testing phase